# Valueless-mess

./: CheckWebsite.py  README.md
Cauchy-Riemann-Condition-Visualize/: Cauchy-Riemann-Condition-visualize.py  ctex_template_Noto_Sans_CJK_SC.tex  custom_config.yml
Cpp-Learning/: 1014.cpp  1669.cpp  3961.cpp
FourierCircleDrawing/: .gitignore  README.md  build.gradle  settings.gradle
IP-Watcher/: ipwatcher.py
Kill-Lord-Voldemort/: Form1.frm  Form1.frx  Form2.frm  Form2.frx  Form3.frm  Form3.frx  Form4.frm  Thumbs.db  toycon.rar  图形1.cdr  备份的_图形1.cdr  暴打伏地魔.vbp  暴打伏地魔.vbw
LMMS-Project/: Ar2.mmp  README.md  Ring_before_class_1.mmp  Unamed2-01.mmp
Mandelbrot/: .gitignore  mandelbrot-plot.py  mandelbrot.cpp
Milkyway-at-home-android-build/: android-build-patch.patch  android-build-script.txt
WebsiteCracker/: .gitignore  .project  Case3.java  Case4  Case4.java  build.gradle  case2.cpp  flood.sh  local.properties  performflood.sh  settings.gradle
eduzhixin-solution/: 10735.wxm
libgdx-arm-build-script/: buildarm.sh
lwjgl-arm-build-patch/: 01-lwjgl3-arm-native.patch
montecarlo-pi/: Cargo.toml
rust-playground/maxwell-dist/: Cargo.toml  README.md  maxwell-dist.toml
rust-playground/maxwell-dist/src/: cl_util.rs  config.rs  constant.rs  lib.rs  main.rs  maxwell-dist.cl  opencl_calculator.rs  randoms.cl  real.h  simulator.rs  util.rs
rust-playground/montecarlo-pi/: Cargo.toml  montecarlo-pi.toml
rust-playground/montecarlo-pi/src/: config.rs  distribution.rs  main.rs  multi_thread_calculator.rs  opencl_calculator.rs  plot.rs  single_thread_calculator.rs
(+215 files in other folders)
