[package]
name = "maxwell-dist"
version = "0.1.0"
authors = ["fxzjshm <fxzjshm@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
ocl-interop = "0.1.5"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
glutin = "0.26.0"
