[package]
name = "maxwell-dist"
version = "0.1.0"
authors = ["fxzjshm <fxzjshm@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.3"
plotters = "0.3.0"
