[package]
name = "montecarlo-pi"
version = "0.1.0"
authors = ["fxzjshm <fxzjshm@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
num = "0.3.1"
num_cpus = "1.13.0"
rayon = "1.5.0"
ocl = "0.19.3"
